objects/APTS_FullCost_BreakUp__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Allow_Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default the value is false</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_By_Location__c</fullName>
        <label>By Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_ID__c</fullName>
        <label>Cost ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Default__c</fullName>
        <label>Default</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Formula__c</fullName>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IsFormula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFormula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In case of Pricing this field is set as true</description>
        <label>IsPricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Cost_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Cost Type</label>
        <referenceTo>APTS_FullCost_BreakUp__c</referenceTo>
        <relationshipLabel>FullCost BreakUps</relationshipLabel>
        <relationshipName>FullCost_BreakUps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity_Independent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By Default the value is False</description>
        <label>Quantity Independent</label>
        <type>Checkbox</type>
    </fields>
    <label>FullCost BreakUp</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>APTS_Cost_ID__c</columns>
        <columns>APTS_Cost_Type__c</columns>
        <columns>NAME</columns>
        <columns>APTS_Parent_Cost_Type__c</columns>
        <columns>APTS_Default__c</columns>
        <columns>APTS_Formula__c</columns>
        <columns>APTS_IsFormula__c</columns>
        <columns>APTS_IsPricing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>FullCost BreakUp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FullCost BreakUps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>